--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,16 @@
-spring.application.name=Fetch-Reward
+spring.application.name=Receipt_Processor
 
-spring.datasource.url=jdbc:h2:mem:fetchrewarddb
-spring.datasource.driver-class-name=org.h2.Driver
+# Database configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
+# Enable H2 console for development
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-logging.level.org.springframework=INFO
-logging.level.com.receiptprocessor=DEBUG
-
-# Server port
-server.port=8081
+# JPA and Hibernate configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
